# libcrn

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  INSTALL.txt  README.md  appveyor.yml  index.html
src/Qt/libQtcrn/: CMakeLists.txt  QtCRNImage.cpp  QtCRNImage.hxx  QtCRNMain.cpp  QtCRNMain.hxx
src/Qt/titus/: CMakeLists.txt  mainwindow.cpp  mainwindow.hxx  titus.cpp
src/demos/: CMakeLists.txt  crn2opencv2crn.cpp  crntest.cpp  estimateStrokes.cpp  ocr4dummies.cpp
src/libcrn/: CMakeLists.txt  CMakeLists.txt.org  CRN.h.in  CRNBlock.cpp  CRNBlock.h  CRNBlockIterator.h  CRNBlockPtr.h  CRNComplexObject.cpp  CRNComplexObject.h  CRNConfig.cpp  CRNConfig.h  CRNDocument.cpp  CRNDocument.h  CRNDocumentPtr.h  CRNException.cpp  CRNException.h  CRNObject.cpp  CRNObject.h  CRNProtocols.cpp  CRNProtocols.h  CRNSavable.cpp  CRNSavable.h  CRNString.cpp  CRNString.h  CRNStringPtr.h  CRNStringUTF8.cpp  CRNStringUTF8.h  CRNStringUTF8Ptr.h  CRNType.h  CRNi18n.h  FindCRN.cmake.in  libcrn.pc.in
src/libcrn/CRNAI/: CRN2Means.h  CRNAffinityPropagation.cpp  CRNAffinityPropagation.h  CRNBasicClassify.h  CRNBipartite.cpp  CRNBipartite.h  CRNClassifResult.h  CRNClassifier.h  CRNDiscreteHMM.cpp  CRNDiscreteHMM.h  CRNGaussianSCHMM.cpp  CRNGaussianSCHMM.h  CRNGenetic.h  CRNIterativeClustering.h  CRNLazyDistanceMatrix.h  CRNOutliers.cpp  CRNOutliers.h  CRNPathFinding.h  CRNSpectralClustering.cpp  CRNSpectralClustering.h  CRNkMeans.cpp  CRNkMeans.h  CRNkMeansClassifier.cpp  CRNkMeansClassifier.h  CRNkMeansPtr.h  CRNkMedoids.cpp  CRNkMedoids.h  CRNkNN.h
src/libcrn/CRNData/: CRNData.cpp  CRNData.h  CRNDataFactory.cpp  CRNDataFactory.h  CRNForeach.h  CRNInt.cpp  CRNInt.h  CRNIntPtr.h  CRNMap.cpp  CRNMap.h  CRNMapPtr.h  CRNReal.cpp  CRNReal.h  CRNRealCoeff.cpp  CRNRealCoeff.h  CRNRealPtr.h  CRNVector.cpp  CRNVector.h  CRNVectorIterator.h  CRNVectorPtr.h
src/libcrn/CRNFeature/: CRNBlockTreeExtractor.h  CRNBlockTreeExtractorTextLinesFromProjection.cpp  CRNBlockTreeExtractorTextLinesFromProjection.h  CRNBlockTreeExtractorWordsFromProjection.cpp  CRNBlockTreeExtractorWordsFromProjection.h  CRNFeatureExtractor.h  CRNFeatureExtractorAngleRadialZoning.cpp  CRNFeatureExtractorAngleRadialZoning.h  CRNFeatureExtractorAngleZoning.cpp  CRNFeatureExtractorAngleZoning.h  CRNFeatureExtractorOverlappingAngleHistogram.cpp  CRNFeatureExtractorOverlappingAngleHistogram.h  CRNFeatureExtractorProfile.cpp  CRNFeatureExtractorProfile.h  CRNFeatureExtractorProjection.cpp  CRNFeatureExtractorProjection.h  CRNFeatureSet.cpp  CRNFeatureSet.h  CRNGradientMatching.cpp  CRNGradientMatching.h  CRNGradientShapeContext.h
src/libcrn/CRNGeometry/: CRNPoint2D.h  CRNPoint2D.hpp  CRNPoint2DDouble.cpp  CRNPoint2DDouble.h  CRNPoint2DInt.cpp  CRNPoint2DInt.h  CRNPoint3D.h  CRNRect.cpp  CRNRect.h  CRNStroke.cpp  CRNStroke.h
src/libcrn/CRNIO/: CRNConsoleMessenger.cpp  CRNConsoleMessenger.h  CRNFileMessenger.cpp  CRNFileMessenger.h  CRNFileShield.cpp  CRNFileShield.h  CRNIO.cpp  CRNIO.h  CRNMessenger.h  CRNPath.cpp  CRNPath.h  CRNPathPtr.h  CRNTextFile.cpp  CRNTextFile.h  CRNZip.cpp  CRNZip.h
src/libcrn/CRNImage/: CRNColorModel.cpp  CRNColorModel.h  CRNDifferential.cpp  CRNDifferential.h  CRNImage.cpp  CRNImage.h  CRNImage.hpp  CRNImage2D.h  CRNImageAngle.cpp  CRNImageAngle.h  CRNImageBW.cpp  CRNImageBW.h  CRNImageFormats.h  CRNImageGradient.cpp  CRNImageGradient.h  CRNImageGray.cpp  CRNImageGray.h  CRNImageHSV.cpp  CRNImageHSV.h  CRNImageLab.cpp  CRNImageLab.h  CRNImageLuv.cpp  CRNImageLuv.h  CRNImagePtr.h  CRNImageRGB.cpp  CRNImageRGB.h  CRNImageRGBPtr.h  CRNImageYUV.cpp  CRNImageYUV.h  CRNPixel.cpp  CRNPixel.h  CRNSummedAreaTable.h
src/libcrn/CRNMath/: CRNCartesian2DFunction.h  CRNCombinatorics.cpp  CRNCombinatorics.h  CRNCubicSpline.cpp  CRNCubicSpline.h  CRNEquationSolver.cpp  CRNEquationSolver.h  CRNFuzzyLogic.cpp  CRNFuzzyLogic.h  CRNLinearInterpolation.cpp  CRNLinearInterpolation.h  CRNMath.cpp  CRNMath.h  CRNMatrix.h  CRNMatrixComplex.cpp  CRNMatrixComplex.h  CRNMatrixDouble.cpp  CRNMatrixDouble.h  CRNMatrixDoublePtr.h  CRNMatrixInt.cpp  CRNMatrixInt.h  CRNMatrixIntPtr.h  CRNMultivariateGaussianMixture.cpp  CRNMultivariateGaussianMixture.h  CRNMultivariateGaussianMixturePtr.h  CRNMultivariateGaussianPDF.cpp  CRNMultivariateGaussianPDF.h  CRNMultivariateGaussianPDFPtr.h  CRNMultivariateRandomTools.cpp  CRNMultivariateRandomTools.h  CRNPolynomialRegression.cpp  CRNPolynomialRegression.h  CRNProp3.cpp  CRNProp3.h  CRNRealToRealFunction.cpp  CRNRealToRealFunction.h  CRNRealToRealFunctionPtr.h  CRNSquareMatrixDouble.cpp  CRNSquareMatrixDouble.h  CRNSquareMatrixDoublePtr.h  (+8 more)
src/libcrn/CRNStatistics/: CRNHistogram.cpp  CRNHistogram.h  CRNHistogramPtr.h  CRNPCA.cpp  CRNPCA.h  CRNStatisticSample.cpp  CRNStatisticSample.h
src/libcrn/CRNUtils/: CRNAtScopeExit.h  CRNCharsetConverter.cpp  CRNCharsetConverter.h  CRNCharsetConverterPtr.h  CRNConfigElement.cpp  (+19 more)
src/libgtkcrnmm/: CMakeLists.txt  CMakeLists.txt.org  FindGTKCRNMM2.cmake.in  FindGTKCRNMM3.cmake.in  GdkCRNPixbuf.cpp  GdkCRNPixbuf.h  GtkCRNAltoDisplay.cpp  GtkCRNAltoDisplay.h  GtkCRNAltoDocument.cpp  GtkCRNAltoDocument.h  GtkCRNAltoImage.cpp  GtkCRNAltoImage.h  GtkCRNAltoParagraphStyleEditor.cpp  GtkCRNAltoParagraphStyleEditor.h  GtkCRNAltoStyleButton.cpp  GtkCRNAltoStyleButton.h  GtkCRNAltoStyleRefList.cpp  GtkCRNAltoStyleRefList.h  GtkCRNAltoTextLineEditor.cpp  GtkCRNAltoTextLineEditor.h  GtkCRNAltoTextStyleEditor.cpp  GtkCRNAltoTextStyleEditor.h  GtkCRNAltoWordEditor.cpp  GtkCRNAltoWordEditor.h  GtkCRNApp.cpp  GtkCRNApp.h  GtkCRNColorAction.cpp  GtkCRNColorAction.h  GtkCRNConfigElement.cpp  GtkCRNConfigElement.h  GtkCRNDocument.cpp  GtkCRNDocument.h  GtkCRNDrawingPanel.cpp  GtkCRNDrawingPanel.h  GtkCRNFileSelecter.cpp  GtkCRNFileSelecter.h  GtkCRNFileSelecterButton.cpp  GtkCRNFileSelecterButton.h  GtkCRNFileSelecterDialog.cpp  GtkCRNFileSelecterDialog.h  (+27 more)
src/nimrod/: CMakeLists.txt  nimrod.cpp  nimrod.icns  nimrod.rc
src/tests/: CMakeLists.txt  main.cpp  protocols.cpp  serialization.cpp
src/titus/: CMakeLists.txt  CMakeLists.txt.org  titus.cpp  titus.icns  titus.rc
(+3469 files in other folders)
